Fixed image spacing

--- a/scss/content.scss
+++ b/scss/content.scss
@@ -9,7 +9,6 @@ body {
 
 img {
     margin: 0;
-    margin-bottom: $padding-medium;
     padding: 0;
 
     border: none;
