--- a/scss/dialog.scss
+++ b/scss/dialog.scss
@@ -64,6 +64,7 @@
 
         .dialog-image {
             width: 100%;
+            margin-bottom: $padding-medium;
 
             border: none;
             border-radius: $border-radius;
